--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
 <body>
 	<h1> Hello Coursera!This is my first website. </h1>
 	<h2>make one more change </h2>
+	<h3>make a third change</h3>
 </body>
 </html>
